@@ -275,6 +275,8 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - src/pulsemanager.cpp: add "FIXME" debug logging (and cleanup.)
     - src/pulsemanager.cpp: backport fix for 526.
     - src/pulsemanager.cpp: backport fix for 422.
+    - src/configdialog.{cpp,h}: add "no record" support for OS X (through
+      PulseManager.)
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
